[project]
name = "conversion"
version = "0.1.0"
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "h5py",
    "scipy",
    "tqdm",
]
requires-python = ">=3.8"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "lifecycle-generation",
    "noaa-requests/noaa-py",
]
